--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,14 +12,14 @@
 
 html {
   font-size: 62.5%;
-  scroll-padding-top: 80px;
+  scroll-padding-top: 0px;
 }
 
 body {
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
-  background-color: black;
+  background-color: #000000;
   color: white;
 }
 
@@ -39,14 +39,14 @@ header {
 
 .Logo {
   font-size: 3rem;
-  color: #2947aa;
+  color: #36594c;
   font-weight: 800;
   cursor: pointer;
   transition: 0.2s ease;
 }
 
 .Logo:hover {
-  transform: scale(1.1);
+  transform: scale(1.3);
 }
 
 nav a {
@@ -60,8 +60,8 @@ nav a {
 
 nav a:hover,
 nav a.active {
-  color: #2947aa;
-  border-bottom: 3px solid #2947aa;
+  color: #36594c;
+  border-bottom: 3px solid #36594c;
 }
 
 section {
@@ -74,37 +74,24 @@ section {
   justify-content: center;
   align-items: center;
   gap: 8rem;
-  background-color: black;
+  background-color: #000000;
 }
 
 .home .home-content h1 {
-  font-size: 5rem;
-  font-weight: 700;
+  font-size: 6rem;
+  font-weight: 900;
   line-height: 1.3;
+  height: 4rem;
 }
 
-span {
-  color: #e7850e;
-}
 
 .home-content h3 {
-  font-size: 3rem;
-  font-weight: 700;
+  font-size: 8rem;
+  font-weight: 1000;
 }
 
 .home-content p {
-  font-size: 1.4rem;
-}
-
-.home-img img {
-  position: relative;
-  width: 50vh;
-  cursor: pointer;
-  transition: 0.2s ease;
-}
-
-.home-img img:hover {
-  transform: scale(1.1);
+  font-size: 1.7rem;
 }
 
 .home .social-icons a {
@@ -113,29 +100,29 @@ span {
   align-items: center;
   font-size: 2rem;
   background-color: transparent;
-  border: 0.2rem solid #e7850e;
+  border: 0.2rem solid #017f66;
   border-radius: 50%;
   margin: 3rem 1.5rem 3rem 0;
   width: 4rem;
   height: 4rem;
-  color: #e7850e;
+  color: #017f66;
   transition: 0.5s ease;
 }
 
 .social-icons a:hover {
-  background-color: #e7850e;
+  background-color: #016e57;
   color: black;
   transform: scale(1.3) translateY(-0.5rem);
-  box-shadow: 0 0 25px #e7850e;
+  box-shadow: 0 0 25px #004d38;
 }
 
 .btn {
   display: inline-block;
   padding: 1rem 2rem;
   background-color: black;
-  border: 0.2rem solid #e7850e;
+  border: 0.2rem solid #08bebb;
   border-radius: 4rem;
-  color: #e7850e;
+  color: #06aca9;
   font-size: 1.6rem;
   letter-spacing: 0.3rem;
   font-weight: 600;
@@ -143,67 +130,16 @@ span {
   cursor: pointer;
 }
 
+/* botao */
 .btn:hover {
   transform: scale(1.03);
-  background-color: #e7850e;
+  background-color: #049a98;
   color: black;
-  box-shadow: 0 0 25px #e7850e;
+  box-shadow: 0 0 25px #007674;
 }
 
-.typing-text {
-  font-size: 34px;
-  font-weight: 600;
-  min-width: 280px;
-}
-
-.typing-text span {
-  position: relative;
-}
-
-.typing-text span::before {
-  content: "";
-  color: #2947aa;
-  animation: words 20s infinite;
-}
-
-.typing-text span::after {
-  content: "";
-  background-color: transparent;
-  position: absolute;
-  width: calc(100%+8px);
-  height: 100%;
-  border-left: 3px solid black;
-  animation: cursor 0.6s infinite;
-}
-
-@keyframes cursor {
-  to {
-    border-left: 3px solid #e7850e;
-  }
-}
-
-@keyframes words {
-  0%,
-  20% {
-    content: "Aluno";
-  }
-
-  21%,
-  40% {
-    content: "Preguisoço";
-  }
-  41%,
-  60% {
-    content: "Estudioso";
-  }
-  61%,
-  80% {
-    content: "Dedicado";
-  }
-  81%,
-  100% {
-    content: "Amigo";
-  }
+.Name span{
+  color:#36594c 
 }
 
 @media (max-width: 995px) {
@@ -285,13 +221,35 @@ span {
 }
 
 .blocos h3 {
-  font-size: 3rem;
-  margin-bottom: 2rem;
-  border-left: 5px solid #2947aa;
-  padding-left: 1.5rem;
+  font-size: 5rem;
+  margin-bottom: 1.5rem;
+  border-bottom: 5px solid #36594c;
 }
 
 .blocos p{
   font-size: 1.8rem;
   line-height: 1.7;
 }
+
+.skill-icons a{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 8rem;
+  background-color: transparent;
+  border: 0.2rem solid #017f66;
+  border-radius: 50%;
+  margin: 3rem 1.5rem 3rem 0;
+  width: 16rem;
+  height: 16rem;
+  color: #017f66;
+  transition: 0.5s ease;
+}
+
+.blocos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
